# pdf-ai-summariser

./: .gitignore  README.md  app.py  cli.py  file_loader.py  pyproject.toml  pyrightconfig.json  requirements.txt
src/: app.py
