[tool.poetry]
name = "pdf-ai-summariser"
version = "0.1.0"
description = ""
authors = ["Rory Sie <rory.sie@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.8"
langchain-ollama = "^0.2.0"
pypdf = "^5.1.0"
streamlit = "^1.40.2"
langchain-community = "^0.3.8"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
